Added Makefile and ConfigMap

--- a/values.yaml
+++ b/values.yaml
@@ -1,20 +1,27 @@
 ---
-postgresql:
-  postgresqlPassword:
-      valueFrom:
-        secretKeyRef:
-          name: nautobot-db
-          key: postgres
-redis:
-  auth:
-    valueFrom:
-        secretKeyRef:
-          name: nautobot-db
-          key: redis
-nautobot:
-  image:
-    registry: "ghcr.io"
-    repository: "networktocode/nautobot-kubernetes"
-    tag: "main"
-    pullSecrets:
-      - "ghcr.io"
+apiVersion: v1
+metadata:
+  name: nautobot
+  namespace: nautobot
+kind: ConfigMap
+data:
+  values: |
+    postgresql:
+      postgresqlPassword:
+        valueFrom:
+          secretKeyRef:
+            name: nautobot-db
+            key: postgres
+    redis:
+      auth:
+        valueFrom:
+            secretKeyRef:
+              name: nautobot-db
+              key: redis
+    nautobot:
+      image:
+        registry: localhost:5000
+        repository: nautobot
+        tag: main
+        pullSecrets:
+          - ghcr.io
